add more test options